--- a/blog.html
+++ b/blog.html
@@ -87,12 +87,12 @@
                     <figcaption>Fig.2- Author</figcaption>
                 </figure>
                 <div class="author-info container">
-                    <h3>Jane Drinkwater</h3>
+                    <h3>Miss Piggy</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Ullam iure dicta dolor reiciendis necessitatibus veniam
-                        laudantium maiores suscipit. Tenetur, culpa rerum
-                        voluptate fugiat ex quisquam.
+                        Here's what Miss Piggy has to say regarding this dish:
+                        <blockquote cite="http://famousquotesandauthors.com/topics/food_quotes.html">
+                            <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque tempore iure nemo, accusantium eius quia delectus. Ex corrupti commodi saepe.</b>
+                        </blockquote>
                     </p>
                 </div>
             </div>
