--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 </figure>
                 <h2>Blueberry French Toast</h2>
                 <p>
-                    Blueberry french toast is a delicious breakfast dish which
-                    once you have it, you will be amazed and will look forward
-                    to having it multiple times. The prep time to make the dish
-                    is 30 min where as baking time is 55 min. If you want to
-                    learn how to make it press read more button below.
+                    <b>Blueberry french toast</b> is a delicious breakfast dish
+                    which once you have it, you will be amazed and will look
+                    forward to having it multiple times. The prep time to make
+                    the dish is 30 min where as baking time is 55 min. If you
+                    want to learn how to make it press read more button below.
                 </p>
                 <button><a href="blog.html">Read More</a></button>
             </div>
@@ -47,11 +47,12 @@
                 </figure>
                 <h2>Amish Breakfast Caserole</h2>
                 <p>
-                    Amish Breakfast Caserole is a delicious breakfast dish which
-                    once you have it, you will be amazed and will look forward
-                    to having it multiple times. The prep time to make the dish
-                    is 30 min where as baking time is 55 min. If you want to
-                    learn how to make it press read more button below.
+                    <b>Amish Breakfast Caserole</b> is a delicious breakfast
+                    dish which once you have it, you will be amazed and will
+                    look forward to having it multiple times. The prep time to
+                    make the dish is 30 min where as baking time is 55 min. If
+                    you want to learn how to make it press read more button
+                    below.
                 </p>
                 <button><a href="blog.html">Read More</a></button>
             </div>
@@ -66,11 +67,11 @@
                 </figure>
                 <h2>Oven Denver Omlet</h2>
                 <p>
-                    Oven Denver Omlet is a delicious breakfast dish which once
-                    you have it, you will be amazed and will look forward to
-                    having it multiple times. The prep time to make the dish is
-                    30 min where as baking time is 55 min. If you want to learn
-                    how to make it press read more button below.
+                    <b>Oven Denver Omlet</b> is a delicious breakfast dish which
+                    once you have it, you will be amazed and will look forward
+                    to having it multiple times. The prep time to make the dish
+                    is 30 min where as baking time is 55 min. If you want to
+                    learn how to make it press read more button below.
                 </p>
                 <button><a href="blog.html">Read More</a></button>
             </div>
